// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider defaultValue 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={10}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider disabled 1`] = `
<div
  className="za-slider za-slider--disabled"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={0}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider max 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={0}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider min 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={0}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider shallows correctly 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={0}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider step 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={0}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;

exports[`Slider value 1`] = `
<div
  className="za-slider"
>
  <div
    className="za-slider__line"
  >
    <div
      className="za-slider__line__bg"
      style={
        Object {
          "width": 0,
        }
      }
    />
  </div>
  <Drag
    onDragEnd={[Function]}
    onDragMove={[Function]}
    onDragStart={[Function]}
  >
    <div
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={10}
      className="za-slider__handle"
      role="slider"
      style={
        Object {
          "left": 0,
        }
      }
    >
      <Tooltip
        direction="top"
        onVisibleChange={[Function]}
        prefixCls="za-tooltip"
        title={10}
        trigger="hover"
        visible={false}
      >
        <div
          className="za-slider-handle-shadow"
        />
      </Tooltip>
    </div>
  </Drag>
</div>
`;
